fiex directory management

--- a/BintoBin/Bin.html
+++ b/BintoBin/Bin.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <link rel="stylesheet" href="/CSS/bin.css">
+    <link rel="stylesheet" href="../CSS/bin.css">
     <title>Bin to Bin flipper</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.9.0/brython.js">
     </script>
