--- a/default.html
+++ b/default.html
@@ -2,7 +2,7 @@
  <html>
 
    <head>
-     <link rel="stylesheet" href="/CSS/Homepage.css">
+     <link rel="stylesheet" href="./CSS/Homepage.css">
      <meta name="viewport" content="width=device-width, initial-scale=1">
 
    </head>
@@ -11,9 +11,9 @@
    <body>
      <div id="mySidepanel" class="sidepanel">
        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-       <a href="/BintoBin/Bin.html">Bin to Bin Flipper</a>
+       <a href="./BintoBin/Bin.html">Bin to Bin Flipper</a>
        <a href="#">AH to Bin Flipper</a>
-       <a href="/baazar/default.html">Bazaar Flipper</a>
+       <a href="#">Bazaar Flipper</a>
        <a href="#">Craft Up flipper</a>
        <a href="#">Trade Items</a>
        <a href="#">NPC to Bin</a>
@@ -23,7 +23,7 @@
      <button class="openbtn" onclick="openNav()">&#x2630;</button>  
      <Pt>Hytools<br></Pt>
      <video width="600" height="400" autoplay muted loop>
-  	<source src="/Images/Slideshow.mp4" type="video/mp4" />
+  	<source src="./Images/Slideshow.mp4" type="video/mp4" />
      </video>
      </div>     
      <p>
